samples/_failures_safe/1761462404_c45daa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ba02fd5.c: In function ‘main’:
./samples/SAFE/__tmp_5ba02fd5.c:171:17: error: expected ‘;’ at end of input
  171 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_5ba02fd5.c:171:9: error: expected declaration or statement at end of input
  171 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_5ba02fd5.c:171:9: error: expected declaration or statement at end of input
